@@ -12,6 +12,8 @@
 	Don't close out file, to let user code close it without erroring.
 	Fix output to STDOUT for info, and splitting of info output when 
 	output to STDOUT, or not split.
+	Use stdin as input if there is no file in argument and stdin
+	is not a tty and fix stdin and stdout names used.
 
 2009-04-23   Patrice Dumas  <dumas@centre-cired.fr>
 
